# docker-vscode-texdev

./: .containerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint  Containerfile  Dockerfile  README.md  devcontainer.json  pyproject.toml  run.sh
.github/: dependabot.yml
