[tool.poetry]
name = "docker-vscode-texdev"
version = "0.2.1"
description = "Docker container for use with VS Code"
license = "BSD-3-Clause"
authors = ["coreone <ateixeira@gmail.com>"]
readme = "README.md"
repository = "https://github.com/coreone/docker-vscode-texdev"
homepage = "https://github.com/coreone/docker-devnull-texdev"
keywords = ["docker", "vscode", "python", "ruby", "puppet", "terraform"]

[tool.poetry.dependencies]
python = "^3.9"  # Compatible python versions must be declared here

# Python specific dependencies with prereleases allowed
black = { version = "^24.4", allow-prereleases = true }
cookiecutter = "^2.6.0"
python-slugify = "^8.0.1"
scaraplate = "^0.5"
toml = "^0.10"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
coverage = "^7.5.2"
green = "^4.0.0"
mock = "^5.1.0"
pydocstyle = "^6.3.0"
pylama = "^8.4.1"
pylint = "^3.2.2"
pyyaml = "^6.0.1"
testtools = "^2.6.0"
twine = "^5.1.0"
wheel = "^0.43.0"
yamllint = "^1.35.1"
